--- a/package.json
+++ b/package.json
@@ -3,23 +3,41 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "concurrently -k -n SVGSprite,NextJS,Storybook -c green,blue,purple \"npm run generate:sprite\" \"next dev --turbopack\" \"npm run storybook\"",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "generate:sprite": "node scripts/generate-sprite.js",
+    "storybook": "storybook dev -p 6006 --no-open",
+    "build-storybook": "storybook build"
   },
   "dependencies": {
+    "concurrently": "^9.1.2",
+    "firebase": "^11.8.1",
+    "next": "15.3.3",
+    "qrcode.react": "^4.2.0",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "next": "15.3.3"
+    "react-dom": "^19.0.0"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@chromatic-com/storybook": "^4.0.0",
+    "@eslint/eslintrc": "^3",
+    "@storybook/addon-a11y": "^9.0.5",
+    "@storybook/addon-docs": "^9.0.5",
+    "@storybook/addon-vitest": "^9.0.5",
+    "@storybook/nextjs-vite": "^9.0.5",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@vitest/browser": "^3.2.2",
+    "@vitest/coverage-v8": "^3.2.2",
     "eslint": "^9",
     "eslint-config-next": "15.3.3",
-    "@eslint/eslintrc": "^3"
+    "eslint-plugin-storybook": "^9.0.5",
+    "playwright": "^1.52.0",
+    "storybook": "^9.0.5",
+    "svg-sprite": "^2.0.4",
+    "typescript": "^5",
+    "vitest": "^3.2.2"
   }
 }
